--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-plugin-flowtype": "^4.6.0",
+    "fibers": "^4.0.2",
+    "node-sass": "^4.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-html-parser": "^2.0.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.3.1",
+    "sass": "^1.25.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
